<?xml version="1.0"?>
<package format="2">
  <name>robot</name>
  <version>0.0.0</version>
  <description>The robot package</description>

  <maintainer email="maider@todo.todo">maider</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
